--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           alt="ambratect-logo" />
         <div class="mt-20 border-primary flex content-between">
           <div class="flex content-center flex-1 py-10">
-            <h1 class="font-lg spacing-lg">MONATSABRECHNUNG</h1>
+            <h1 class="font-md spacing-lg">MONATSABRECHNUNG</h1>
           </div>
           <div class="flex align-items-center px-30 bg-color-black">
             <p class="font-md color-background weight-semi-bold">Aug. 24</p>
@@ -29,19 +29,19 @@
       <main>
         <table class="sales-info-table">
           <tr>
-            <td>Name :</td>
+            <th>Name :</th>
             <td>[[sales_name]]</td>
           </tr>
           <tr>
-            <td>VT-ID :</td>
+            <th>VT-ID :</th>
             <td>[[sales_name]]</td>
           </tr>
           <tr>
-            <td>Verk-CODE :</td>
+            <th>Verk-CODE :</th>
             <td>[[sales_name]]</td>
           </tr>
           <tr>
-            <td>Personalinr:</td>
+            <th>Personalinr:</th>
             <td>[[sales_name]]</td>
           </tr>
         </table>
@@ -103,7 +103,7 @@
               </tbody>
               <tfoot>
                 <tr>
-                  <th>Gesamt</th>
+                  <th>Gesamt:</th>
                   <td>[[amount]]</td>
                 </tr>
               </tfoot>
