--- a/index.html
+++ b/index.html
@@ -100,14 +100,85 @@
                   <td>[[€amount]]</td>
                   <td class="amount-emphasize">[[€amount]]</td>
                 </tr>
+                <tr>
+                  <th>Sonstiges:</th>
+                  <td class="miscellaneous-value">[[(€amount)]]</td>
+                </tr>
               </tbody>
-              <tfoot>
+              <tbody class="total-section">
                 <tr>
                   <th>Gesamt:</th>
                   <td>[[amount]]</td>
                 </tr>
-              </tfoot>
+              </tbody>
+              <tbody>
+                <tr>
+                  <th>Sprüher:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Ambrasol:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+              </tbody>
             </table>
+            <table class="__second-table-overview-performance">
+              <tbody>
+                <tr>
+                  <th>Umsatz Handelsware:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Umsatz Sonstige:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Trainer-Umsatz Handelsware:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Trainer-Umsatz Sonstige:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Sprüher:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Trainer-Sprüher:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Ambrasol:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Trainer-Ambrasol:</th>
+                  <td>[[€amount]]</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th>Sonstiges:</th>
+                  <td></td>
+                </tr>
+              </tbody>
+              <tbody class="total-section">
+                <tr>
+                  <th>Gesamt:</th>
+                  <td>[[amount]]</td>
+                </tr>
+              </tbody>
+            </table>
+
           </div>
 
           <div class="w-sm">
