--- a/invoice-v1.html
+++ b/invoice-v1.html
@@ -58,26 +58,23 @@
               [[#each content.performanceOverviewDetails.data]]
               <tr>
                 <th>[[label]]:</th>
-                <td class="[[#if (isNegative salesVolume)]]miscellaneous-value[[/if]]">[[formatCurrency
+                <td class="[[#if (function 'isNegative' salesVolume)]]miscellaneous-value[[/if]]">[[function
+                  'formatCurrency'
                   salesVolume]]
                 </td>
-                <td class="is-number-emphasize [[#if (isNegative sigma)]]danger[[/if]]">[[#if sigma]]
-                  [[formatCurrency
+                <td class="is-number-emphasize [[#if (function 'isNegative' sigma)]]danger[[/if]]">[[#if sigma]]
+                  [[function 'formatCurrency'
                   sigma]] [[/if]]</td>
               </tr>
               [[/each]]
             </tbody>
-            [[#if content.performanceOverviewDetails.totalSalesVolume]]
             <tbody class="total-section">
               <tr>
                 <th>[[constant.total.de]]:</th>
-                <td
-                  class="[[#if (isNegative content.performanceOverviewDetails.totalSalesVolume)]]miscellaneous-value[[/if]]">
-                  [[formatCurrency
-                  content.performanceOverviewDetails.totalSalesVolume]]</td>
+                <td>
+                  [[function 'totalPerformanceOverview' content.performanceOverviewDetails.data]]</td>
               </tr>
             </tbody>
-            [[/if]]
             [[/if]]
           </table>
         </div>
@@ -109,23 +106,23 @@
                   <div class="filled-chevron-right"></div>
                 </td>
                 <td class="is-number">[[this.percent]]</td>
-                <td class="is-number-emphasize [[#if (isNegative this.commission)]]miscellaneous-value[[/if]]">[[#if
-                  this.commission]] [[formatCurrency this.commission]][[/if]]</td>
+                <td
+                  class="is-number-emphasize [[#if (function 'isNegative' this.commission)]]miscellaneous-value[[/if]]">
+                  [[#if
+                  this.commission]] [[function 'formatCurrency' this.commission]][[/if]]</td>
               </tr>
               [[/each]]
             </tbody>
             [[/if]]
-            [[#if content.serviceBillingDetails.totalCommission]]
+
             <tbody class="total-section">
               <tr>
                 <th colspan="2">[[constant.commissionTotal.de]]:</th>
                 <td colspan="2"></td>
-                <td
-                  class="[[#if (isNegative content.serviceBillingDetails.totalCommission)]]miscellaneous-value[[/if]]">
-                  [[formatCurrency content.serviceBillingDetails.totalCommission]]</td>
+                <td>
+                  [[function 'totalServiceBilling' content.serviceBillingDetails.data]]</td>
               </tr>
             </tbody>
-            [[/if]]
           </table>
         </div>
         [[/if]]
