update helper function

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         return value < 0;
         break;
       case "formatCurrency":
-        formatCurrency(value)
+        return formatCurrency(value)
         break;
       case "totalPerformanceOverview":
         const total = getTotalAmount(value)
