--- a/invoiceType2/invoice-v2.html
+++ b/invoiceType2/invoice-v2.html
@@ -500,6 +500,8 @@
                             </div>
                         </div>
                     </div>
+
+                    <div></div>
                 </div>
             </div>
 
