update styling pdf 2

--- a/invoiceType2/invoice-v2.html
+++ b/invoiceType2/invoice-v2.html
@@ -1,5 +1,5 @@
 <div id="container" class="p-md">
-    <div class="border-primary p-lg">
+    <div class="main">
         <div class="pages ">
             <header>
                 <div>
@@ -404,7 +404,7 @@
             </div>
         </div>
         <div class="pages">
-            <div class="commission-settlement mt-16">
+            <div class="commission-settlement mt-20">
                 <h4>[[content.postingDocumentForCommissionSettlement]]</h4>
                 <table>
                     <tbody>
